--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -1,24 +1,25 @@
 \begin{titlepage}
 \begin{center}
 
-% 1. The title of the thesis/dissertation, centered 2Ó below the top of the page
+% 1. The title of the thesis/dissertation, centered 2Ã“ below the top of the page
 
 \vspace{2in}
 \begin{singlespace}
 \bf
-THE TITLE OF YOUR THESIS:\\
-USE LINE BREAKS IF NEEDED
+The Human Factor:\\
+Behavioral Drivers of Worker Discretion and the Operational Impact of this Discretion\\
+on Individual Productivity and System Performance
 \end{singlespace}
 
 
-% 2. Your name, centered 1Ó below the title.
+% 2. Your name, centered 1Ã“ below the title.
 \vspace{61pt} % 1 in = 72pt, 11pt for the line with text
-\large Your M. Name
+\large Robert Jay Niewoehner III
 \end{center}
 
 
-%3. The following statement, within the full mar- gins, 1Ó below your name:
-%ÒA dissertation [or thesis] submitted to the faculty of the University of North Carolina at Chapel Hill in partial fulfillment of the requirements for the degree of	in the Department [or School or Curriculum] of      .Ó
+%3. The following statement, within the full mar- gins, 1Ã“ below your name:
+%Ã’A dissertation [or thesis] submitted to the faculty of the University of North Carolina at Chapel Hill in partial fulfillment of the requirements for the degree of	in the Department [or School or Curriculum] of      .Ã“
 
 \vspace{50pt}
 \begin{singlespace}
@@ -29,7 +30,7 @@ the Department of Computer Science.
 \end{singlespace}
 
 
-%4. On the lower half of the page, centered, the words ÒChapel HillÓ
+%4. On the lower half of the page, centered, the words Ã’Chapel HillÃ“
 %and one line below that, the year in which your committee approves
 %the completed thesis/dissertation.
 \vspace{50pt}
@@ -40,7 +41,7 @@ Chapel Hill\\
 \end{singlespace}
 \end{center}
 
-%5. On the right-hand side of the page, ÒApproved by,Ó followed by lines for the
+%5. On the right-hand side of the page, Ã’Approved by,Ã“ followed by lines for the
 %signatures of the adviser and four (two for thesis) readers. List
 
 \vfill
