--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -24,9 +24,9 @@ on Individual Productivity and System Performance
 \vspace{50pt}
 \begin{singlespace}
 \noindent \large
-A dissertation submitted to the faculty of the University of North Carolina at Chapel Hill
-in partial fulfillment of the requirements for the degree of Doctor of Philosophy in
-the Department of Computer Science.
+A dissertation submitted to the faculty at the University of North Carolina at Chapel Hill
+in partial fulfillment of the requirements for the degree of Doctor of Philosophy in the 
+Operations Department in the Kenan-Flagler Business School.
 \end{singlespace}
 
 
@@ -37,7 +37,7 @@ the Department of Computer Science.
 \begin{center}
 \begin{singlespace} \large
 Chapel Hill\\
-201X
+2022
 \end{singlespace}
 \end{center}
 
@@ -49,11 +49,11 @@ Chapel Hill\\
 \begin{minipage}[t]{1.5in} \large
 Approved by:\\
 %To be approved by: \\
-Committee Member 1 \\
-Committee Member 2 \\
-Committee Member 3 \\
-Committee Member 4 \\
-Committee Member 5
+Bradley Staats \\
+Vinayak Deshpande \\
+Chloe Glaeser \\
+Diwas KC \\
+Jayashankar Swaminathan
 \end{minipage}
 \end{flushright}
 
