--- a/frontmatter/copyright.tex
+++ b/frontmatter/copyright.tex
@@ -1,13 +1,13 @@
 %If you wish to copyright your thesis, you must include a copyright page with the following information single-spaced and centered on the bottom half of the page:
-%© Year 
+%Â© Year 
 %Full Name (exactly as it appears on the title page) 
 %ALL RIGHTS RESERVED
 %This page should immediately follow the title page, and should bear the lower case Roman numeral: ii.
 
 \begin{center}
 \begin{singlespace}
-\copyright 201X\\
-Your M.\ Name \\
+\copyright 2020\\
+Robert Jay Niewoehner III \\
 ALL RIGHTS RESERVED
 \end{singlespace}
 \end{center}
