Changes to acknowledgements.tex

--- a/frontmatter/pages.tex
+++ b/frontmatter/pages.tex
@@ -43,9 +43,9 @@
 
 \input{frontmatter/figures}
 
-%8. List of Abbreviations (if applicable)
-\input{frontmatter/abbreviations}
+%8. List of Abbreviations (commented out)
+% \input{frontmatter/abbreviations}
 
-%9. List of Symbols (if applicable)
+%9. List of Symbols (commented out)
 
 \pagenumbering{arabic}
