--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,8 +1,8 @@
-%The word “Abstract” should be centered 2? below the top of the page. 
+%The word √íAbstract√ì should be centered 2? below the top of the page. 
 %Skip one line, then center your name followed by the title of the 
 %thesis/dissertation. Use as many lines as necessary. Centered below the 
-%title include the phrase, in parentheses, “(Under the direction of  
-%_________)” and include the name(s) of the dissertation advisor(s).
+%title include the phrase, in parentheses, √í(Under the direction of  
+%_________)√ì and include the name(s) of the dissertation advisor(s).
 %Skip one line and begin the content of the abstract. It should be 
 %double-spaced and conform to margin guidelines. An abstract should not 
 %exceed 150 words for a thesis and 350 words for a dissertation. The 
@@ -30,6 +30,10 @@ YOUR M.\ NAME: Your Title in Title Font, but not in all Caps \\
 \end{singlespace}
 \end{center}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+\textbf{Aim:} Recent operations research acknowledges that agents within our operational systems have discretion to make decisions. Modeling this behavior requires assumptions, but these assumptions may induce gaps between models and real-world observations. In the end, these decisions alter firm-level outputs, both for good and ill. Despite this, deliberate system design can transform problematic deviance into productive discretion. In this thesis, I detail three explorations of system design and the operational impact of human discretion. \\
+\textbf{Background:} The operations literature has a rich history of applying formal mathematical models to explain and study both product and service settings. Operational systems matter, but wherever these systems contain human discretion, people matter too. \\
+\textbf{Context & Methodology:} I primarily focus on the operational effects in the healthcare setting, as healthcare operations frequently focus on how providers shape a service system and recent work has explored interventions to alter provider behavior in positive ways. I apply various empirical methods to answer my research questions. In the first essay, I designed and implemented a field experiment among 145 healthcare clinics. In the second and third essays, I leverage archival data analysis methods. \\
+\textbf{Conclusion:} Operations research considers many facets of work: ‚ÄúWhat work should we do? When should we do it? How should we do it? And who should be doing it?‚Äù This thesis responds each of these questions, with a particular focus on the role of people within the system. My work provides valuable clarity into how human discretion affects operational outcomes, and my insights empower future operations research to more accurately identify the full spectrum of worker behavior. \\
+
 
 \clearpage
