More changes, added Chapter 3

--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -25,14 +25,15 @@
 \vspace{11pt}
 
 \begin{singlespace}
-YOUR M.\ NAME: Your Title in Title Font, but not in all Caps \\
-(Under the direction of Your Advisor)
+Robert Jay Niewoehner III: The Human Factor: Behavioral Drivers of Worker Discretion and the Operational Impact of this Discretion on Individual Productivity and System Performance \\
+(Under the direction of Bradley Staats)
 \end{singlespace}
 \end{center}
 
+\noindent
 \textbf{Aim:} Recent operations research acknowledges that agents within our operational systems have discretion to make decisions. Modeling this behavior requires assumptions, but these assumptions may induce gaps between models and real-world observations. In the end, these decisions alter firm-level outputs, both for good and ill. Despite this, deliberate system design can transform problematic deviance into productive discretion. In this thesis, I detail three explorations of system design and the operational impact of human discretion. \\
 \textbf{Background:} The operations literature has a rich history of applying formal mathematical models to explain and study both product and service settings. Operational systems matter, but wherever these systems contain human discretion, people matter too. \\
-\textbf{Context & Methodology:} I primarily focus on the operational effects in the healthcare setting, as healthcare operations frequently focus on how providers shape a service system and recent work has explored interventions to alter provider behavior in positive ways. I apply various empirical methods to answer my research questions. In the first essay, I designed and implemented a field experiment among 145 healthcare clinics. In the second and third essays, I leverage archival data analysis methods. \\
+\textbf{Context and Methodology:} I primarily focus on the operational effects in the healthcare setting, as healthcare operations frequently focus on how providers shape a service system and recent work has explored interventions to alter provider behavior in positive ways. I apply various empirical methods to answer my research questions. In the first essay, I designed and implemented a field experiment among 145 healthcare clinics. In the second and third essays, I leverage archival data analysis methods. \\
 \textbf{Conclusion:} Operations research considers many facets of work: “What work should we do? When should we do it? How should we do it? And who should be doing it?” This thesis responds each of these questions, with a particular focus on the role of people within the system. My work provides valuable clarity into how human discretion affects operational outcomes, and my insights empower future operations research to more accurately identify the full spectrum of worker behavior. \\
 
 
