--- a/frontmatter/pages.tex
+++ b/frontmatter/pages.tex
@@ -21,8 +21,7 @@
 \input{frontmatter/abstract}
 
 %4. Dedication, Acknowledgement(s) and/or Preface (all optional)
-
-\input{frontmatter/dedication}
+% \input{frontmatter/dedication}
 \input{frontmatter/acknowledgement}
 
 %\input{frontmatter/preface}
