--- a/frontmatter/acknowledgement.tex
+++ b/frontmatter/acknowledgement.tex
@@ -15,7 +15,7 @@ In all of this, Professor Brad Staats deserves a space of his own. Unfortunately
 I must also acknowledge my peers and friends at Kenan-Flagler’s doctoral program. I’m grateful our paths intersected. Particularly, I’m not sure what the first two years would have looked like without Dayton Steele by my side. We worked tirelessly together on numerous assignments that might still not be done as of this writing, were it not for his patience and enduring friendship. Furthermore, as an empirical researcher, I wouldn’t have had much research to be proud of without the support of corporate partnerships that yielded interesting settings, questions, and data. I’m also indebted to the healthcare practitioners who made time to let me shadow them, ask (lots of) questions, bug them via email, and ultimately improve my understanding of their domain.
 
 Almost last, but certainly not least, I’m grateful to my tirelessly loving wife, who encouraged and upheld me through all the ups and down of the last several years. Not only did she sacrifice her own career to support mine, but she willingly shouldered essential familial burdens, thus enabling me to pursue success with a singular focus.
-This thesis represents the work of one looking for purpose in a broken world. I consider the work contained here an attempt to put some of those broken pieces back together, and so I thank you for taking the time to consider these efforts.
+This thesis represents the work of one looking for purpose in a broken world. I consider the work contained here an attempt to put some of those broken pieces back together, and so I thank you for taking the time to consider these efforts. $\mathcal{S.D.G.}$
 
 
 \clearpage
